Deadlock detection should check cycles for stability or should be disabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.0.3, 3.1.3
    • Affects Version/s: 3.0.0
    • Component/s: Concurrency, MMAPv1
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Our deadlock detector does not check for deadlock stability currently. It is possible that as the graph traversal progresses, locks which we were waiting on earlier get freed and suddenly become waiting on us, becoming counted in the cycle.

      The fix would be to add check for deadlock stability by re-iterating the discovered cycle. Until this is fixed, we cannot use the deadlock deterministically for assertions, only for retries (which is what we already do).

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: