SERVER-16636 Disable deadlock detection during MMAP V1 journal lock upgrade